--- a/src/component/RoundedText.module.css
+++ b/src/component/RoundedText.module.css
@@ -4,7 +4,7 @@
         justify-content: center;
         align-items:center;
         border-radius: 10px;
-        height: 2.85vh;
+        height: 2.95vh;
         padding: 1.25vh 2.25vh;
         margin: 0 1% 2vh 1%;
         width: 90%;
